--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Hello World
 
-<a href="direct-flights/index.html">Direct Flights Search</a>
+<a href="direct-flights-react/index.html">Direct Flights Search</a>
